<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_s2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dogs_poker_game"
    tools:context="com.example.nick.androidproject2.MenuS2">

    <Button
        android:text="@string/viewhand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/viewHand"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/pname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerName"
        android:layout_alignBottom="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp" />
</RelativeLayout>
