<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment_hand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hunter_green"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context="com.example.nick.androidproject2.FragmentPoker">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"

        >

        <TextView
            android:text="@string/handsPlayed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="1" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/hands"
            android:layout_weight="1" />

        <TextView
            android:text="@string/bank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bank"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:gravity="top|center_horizontal"
        android:id="@+id/name"
        android:textSize="50sp"
        android:layout_weight="1.5" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:weightSum="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/card1"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/card2"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/card3"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/card4"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/card5"
                    android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/holdbutrow"
            android:weightSum="5">


            <Button
                android:text="@string/Hold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:layout_weight="1" />

            <Button
                android:text="@string/Hold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:layout_weight="1" />

            <Button
                android:text="@string/Hold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:layout_weight="1" />

            <Button
                android:text="@string/Hold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button4"
                android:layout_weight="1" />

            <Button
                android:text="@string/Hold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button5"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:text="@string/menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/menu"
            android:background="@color/lightGrey"
            android:layout_weight="1" />

        <Button
            android:text="@string/deal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/deal"
            android:background="@color/lightGrey2"
            android:layout_weight="1" />

        <Button
            android:text="@string/wins"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/winButton"
            android:background="@color/dk_red"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
